--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,6 @@
-<footer class="footer">我是 footer</footer>
+<footer class="bg-primary">
+  <div class="container copyright">
+    <div class="nav-border"></div>
+    <div class="bottom-text">@Vivre 2024 All right Reserved</div>
+  </div>
+</footer>
