--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Anek+Gurmukhi:wght@100..800&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @import url("https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js");
 
 @import "../../node_modules/bootstrap/scss/functions";
 @import './utils/variables';
@@ -23,5 +24,6 @@ $utilities: map-merge(
 @import './layout/navbar.scss';
 @import './layout/footer.scss';
 
-
 @import './pages/index.scss';
+@import './pages/article-1.scss';
+
