--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,4 +1,17 @@
-.footer{
-  background: #69F0AE;
-  font-size: 64px;
+.copyright {
+    padding: 0 0.75rem;
+    .bottom-text {
+        padding: 1.5rem 0;
+        color:$primary-400;
+        text-align: center;
+        font-weight: 400;
+        font-size: .875rem;
+    @include pc{
+        font-size: 1rem;
+        font-weight: 600;
+        }
+    }
+    .nav-border{
+        border: 1px solid $neutral-200;
+    }
 }
