--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -438,7 +438,8 @@ $spacers: (
   5: $spacer * 1.5,
   6: $spacer * 1.75,
   7: $spacer * 2,
-  8: $spacer * 2.5
+  8: $spacer * 2.5,
+  9: $spacer * 3
 ) !default;
 // scss-docs-end spacer-variables-maps
 
