--- a/layout/navbar.ejs
+++ b/layout/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-primary">
   <div class="container">
-    <div><a class="navbar-logo" href="#">Vivre</a></div>
+    <div><a class="navbar-logo" href="../pages/index.html">Vivre</a></div>
     <button
       class="navbar-toggler"
       type="button"
@@ -27,7 +27,12 @@
       </form>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">所有文章</a>
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="../pages/article-1.html"
+            >所有文章</a
+          >
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">訂閱方案</a>
